tests/compile_fail/v3_inline_default_removed.iron
object Config {
    var timeout: Int
    var retries: Int
    init(t: Int, r: Int) {
        self.timeout = t
        self.retries = r
    }
}

object Legacy {
    var timeout: Int = 30
}
